--- a/index.html
+++ b/index.html
@@ -19,45 +19,73 @@
           <div class="research">
             <p>área da barra de pesquisa</p>
           </div>
+          <button>Seja um mentor</button>
         </header>
+
+
         <!-- ASIDE MENU -->
 
-    <aside class="menu">
+        <aside class="menu">
+            
+            <!-- BUTTON USED ON MOBILE -->
+        <button id="nav-btn">
+            Menu
+        </button>
+
+        <div id="nav-menu">  
             <!-- PROFILE USER -->
+            <div class="profile">
+                <div class="profile-image">
+                    <img src="./assets/img/perfil mulher.jpg" alt="Foto do perfil da conta">
+                </div>
 
-      <div class="profile">
-        <div class="profile-image">
-          <img src="#" alt="Foto do perfil da conta">
-        </div>
-        <div class="profile-info">
-          <h3>Cristina Martins</h3>
-          <h2> <a href="#">Editar perfil</h2> </p>
-        </div>
-      </div>
+                <div class="profile-info">
+                    <h3>Cristina Martins</h3>
+                    <h2> <a href="#">Editar perfil</a></h2> 
+                </div>
+            </div>
+
             <!-- NAV -->
-      <nav class="nav">
-        <div class="nav-item">
-          <i class="nav-item-icon">i</i>
-          <a href="#">Página Inicial</a>
-        </div> 
-        <div class="nav-item">
-          <i class="nav-item-icon">i</i>
-          <a href="#">Meus agendamentos</a>
-        </div>
-        <div class="nav-item">
-          <i class="nav-item-icon">i</i>
-          <a href="#">Notificações</a>
-        </div>
-      </nav>
+            <nav class="nav">
 
+                <!-- MENU ITEMS -->
+            <div class="menu-item">
+                <a href="#">
+                    <i class="menu-item-icon">i</i>
+                    <h4>Página Inicial</h4> 
+                </a>
+            </div> 
+
+            <div class="menu-item">            
+                <a href="#">
+                    <i class="menu-item-icon">i</i>  
+                    <h4>Meus agendamentos</h4> 
+                </a>
+            </div>
+
+            <div class="menu-item">            
+                <a href="#">
+                    <i class="menu-item-icon">i</i>  
+                    <h4>Notificações</h4> 
+                </a>
+            </div>
+
+            <div class="menu-item">            
+                <a href="#">
+                    <i class="menu-item-icon">?</i>  
+                </a>
+            </div>
+        </div>
+ 
+        </nav>
+        
     </aside>
 
 
     <!-- SECTON -->
     <section class="main">
       <div class="mentors">
-        <h2 class="mentors-title">Mentores indicados para você</h2>
-        <div class="mentors-card card-1">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do Mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -71,7 +99,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-2">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do Mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -85,7 +113,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-3">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -99,7 +127,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-4">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -113,7 +141,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-5">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -127,7 +155,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-6">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -141,7 +169,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-7">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -155,7 +183,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-8">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -169,7 +197,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-9">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -183,7 +211,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-10">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -197,7 +225,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-11">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
@@ -211,7 +239,7 @@
             <button class="mentors-card-btn">Ver Perfil</button>
           </div>
         </div>
-        <div class="mentors-card card-12">
+        <div class="mentors-card">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
