responsive e cards-mentors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles/css/reset.css">
   <link rel="stylesheet" href="./styles/css/style-aside.css">
   <link rel="stylesheet" href="./styles/css/style-index.css">
-  <title></title>
+  <title>Página Inicia</title>
 </head>
 <body>
   <main class="grid-main">
@@ -16,10 +16,10 @@
         <!-- HEADER --> 
 
         <header class="research">
-          <div class="research">
+          <button>Seja um mentor</button>
+          <div class="research-search">
             <p>área da barra de pesquisa</p>
           </div>
-          <button>Seja um mentor</button>
         </header>
 
 
@@ -86,173 +86,65 @@
     <section class="main">
       <div class="mentors">
         <div class="mentors-card">
-          <img src="#" alt="Perfil do Mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-img"></div>
+          <h3 class="mentors-card-name">Guilherme Lima</h3>
+          <h4>Desenvolvedor Sênior</h4>
           <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
             <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
             </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
           </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
         </div>
+
         <div class="mentors-card">
-          <img src="#" alt="Perfil do Mentor">
+          <div class="mentors-card-img"></div>
           <h3 class="mentors-card-name">Nome do mentor</h3>
+          <h4>Cargo que ocupa</h4>
           <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
             <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
             </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
           </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
         </div>
+
         <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
+          <div class="mentors-card-img"></div>
           <h3 class="mentors-card-name">Nome do mentor</h3>
+          <h4>Cargo que ocupa</h4>
           <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
             <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
             </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
           </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
         </div>
+
         <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
+          <div class="mentors-card-img"></div>
           <h3 class="mentors-card-name">Nome do mentor</h3>
+          <h4>Cargo que ocupa</h4>
           <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
             <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
             </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
           </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
         </div>
-        <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
-            <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
-            </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
-          </div>
-        </div>
-        <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
-            <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
-            </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
-          </div>
-        </div>
-        <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
-            <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
-            </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
-          </div>
-        </div>
-        <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
-            <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
-            </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
-          </div>
-        </div>
-        <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
-            <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
-            </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
-          </div>
-        </div>
-        <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
-            <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
-            </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
-          </div>
-        </div>
-        <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
-            <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
-            </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
-          </div>
-        </div>
-        <div class="mentors-card">
-          <img src="#" alt="Perfil do mentor">
-          <h3 class="mentors-card-name">Nome do mentor</h3>
-          <div class="mentors-card-description">
-            <p>Cargo que ocupa</p>
-            <div class="mentors-card-description-specialty">
-              <p>HTML</p>
-              <p>Javascript</p>
-              <p>React</p>
-              <p>+2</p>
-            </div>
-            <button class="mentors-card-btn">Ver Perfil</button>
-          </div>
-        </div>
+
       </div>
     </section>
   </main>
