fechando feature dia 14

--- a/index.html
+++ b/index.html
@@ -49,30 +49,30 @@
             <nav class="nav">
 
                 <!-- MENU ITEMS -->
-            <div class="menu-item">
+            <div class="nav-item">
                 <a href="#">
-                    <i class="menu-item-icon">i</i>
+                    <i class="nav-item-icon">i</i>
                     <h4>Página Inicial</h4> 
                 </a>
             </div> 
 
-            <div class="menu-item">            
+            <div class="nav-item">            
                 <a href="#">
-                    <i class="menu-item-icon">i</i>  
+                    <i class="nav-item-icon">i</i>  
                     <h4>Meus agendamentos</h4> 
                 </a>
             </div>
 
-            <div class="menu-item">            
+            <div class="nav-item">            
                 <a href="#">
-                    <i class="menu-item-icon">i</i>  
+                    <i class="nav-item-icon">i</i>  
                     <h4>Notificações</h4> 
                 </a>
             </div>
 
-            <div class="menu-item">            
+            <div class="nav-item">            
                 <a href="#">
-                    <i class="menu-item-icon">?</i>  
+                    <i class="nav-item-icon">?</i>  
                 </a>
             </div>
         </div>
@@ -115,6 +115,35 @@
           <button class="mentors-card-btn">Ver Perfil</button>
         </div>
 
+        <div class="mentors-card">
+          <div class="mentors-card-img"></div>
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <h4>Cargo que ocupa</h4>
+          <div class="mentors-card-description">
+            <div class="mentors-card-description-specialty">
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
+            </div>
+          </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
+        </div>
+
+        <div class="mentors-card">
+          <div class="mentors-card-img"></div>
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <h4>Cargo que ocupa</h4>
+          <div class="mentors-card-description">
+            <div class="mentors-card-description-specialty">
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
+            </div>
+          </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
+        </div>
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
           <h3 class="mentors-card-name">Nome do mentor</h3>
