working with icons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./styles/css/reset.css">
   <link rel="stylesheet" href="./styles/css/style-aside.css">
   <link rel="stylesheet" href="./styles/css/style-index.css">
+
   <title>Página Inicia</title>
 </head>
 <body>
@@ -28,9 +29,9 @@
         <aside class="menu">
             
             <!-- BUTTON USED ON MOBILE -->
-        <button id="nav-btn">
-            Menu
-        </button>
+        <div id="nav-btn">
+            <img src="./assets/icons/aside-mobile-icon.svg" alt="">
+        </div>
 
         <div id="nav-menu">  
             <!-- PROFILE USER -->
@@ -115,6 +116,35 @@
           <button class="mentors-card-btn">Ver Perfil</button>
         </div>
 
+        <div class="mentors-card">
+          <div class="mentors-card-img"></div>
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <h4>Cargo que ocupa</h4>
+          <div class="mentors-card-description">
+            <div class="mentors-card-description-specialty">
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
+            </div>
+          </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
+        </div>
+
+        <div class="mentors-card">
+          <div class="mentors-card-img"></div>
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <h4>Cargo que ocupa</h4>
+          <div class="mentors-card-description">
+            <div class="mentors-card-description-specialty">
+              <h4>HTML</h4>
+              <h4>Javascript</h4>
+              <h4>React</h4>
+              <h4>+2</h4>
+            </div>
+          </div>
+          <button class="mentors-card-btn">Ver Perfil</button>
+        </div>
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
           <h3 class="mentors-card-name">Nome do mentor</h3>
