linking important css files

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -4,6 +4,11 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="./styles/css/reset.css">
+   <link rel="stylesheet" href="./styles/css/style-aside.css">
+   <link rel="stylesheet" href="./styles/css/edit-profile.css">
+   <link rel="stylesheet" href="./styles/css/root.css">
+   <link rel="stylesheet" href="./styles/css/font-size.css">
    <title></title>
 </head>
 <body>
@@ -13,25 +18,25 @@
          <div class="profile-photo">
 
          </div>
-         <a href="#">Alterar foto</a>
+         <a id="change-photo" href="#">Alterar foto</a>
 
-         <label for="name">Nome</label>
+         <label class="form-profile-label font14" for="name">Nome</label>
          <input type="text"id="name" placeholder="Cristina Martins">
 
-         <label for="job-role">Cargo</label>
+         <label class="form-profile-label font14" for="job-role">Cargo</label>
          <input type="text" id="job-role" placeholder="UX Designer">
 
-         <label for="email">Email</label>
+         <label class="form-profile-label font14" for="email">Email</label>
          <input type="email" id="email" placeholder="cristinamartins@fcamara.com">
 
-         <label for="about">Sobre mim</label>
+         <label class="form-profile-label font14" for="about">Sobre mim</label>
          <input type="text" id="about" placeholder="Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.">
 
-         <label for="education">Formação</label>
+         <label class="form-profile-label font14" for="education">Formação</label>
          <input type="text" id="education">
          <input type="text" id="education">
 
-         <label for="">Redes sociais</label>
+         <label class="form-profile-label font14" for="">Redes sociais</label>
          <input type="url" name="userLinkedin" id="userLinkedin">
          <input type="url" name="userMedium" id="userMedium">
          <input type="url" name="userBehance" id="userBehance">
