--- a/edit-profile.html
+++ b/edit-profile.html
@@ -4,6 +4,13 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <!--Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+  <!--Styles-->
    <link rel="stylesheet" href="./styles/css/reset.css">
    <link rel="stylesheet" href="./styles/css/style-aside.css">
    <link rel="stylesheet" href="./styles/css/edit-profile.css">
@@ -20,28 +27,40 @@
          </div>
          <a id="change-photo" href="#">Alterar foto</a>
 
-         <label class="form-profile-label font14" for="name">Nome</label>
-         <input type="text"id="name" placeholder="Cristina Martins">
+         <div class="label-input">
+            <label class="form-profile-label font14" for="name">Nome</label>
+            <input type="text"id="name" placeholder="Cristina Martins">
+         </div>
 
-         <label class="form-profile-label font14" for="job-role">Cargo</label>
-         <input type="text" id="job-role" placeholder="UX Designer">
+         <div class="label-input">
+            <label class="form-profile-label font14" for="job-role">Cargo</label>
+            <input type="text" id="job-role" placeholder="UX Designer">
+         </div>
 
-         <label class="form-profile-label font14" for="email">Email</label>
-         <input type="email" id="email" placeholder="cristinamartins@fcamara.com">
+         <div class="label-input">
+            <label class="form-profile-label font14" for="email">Email</label>
+            <input type="email" id="email" placeholder="cristinamartins@fcamara.com">
+         </div>
 
-         <label class="form-profile-label font14" for="about">Sobre mim</label>
-         <input type="text" id="about" placeholder="Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.">
+         <div class="label-input">
+            <label class="form-profile-label font14" for="about">Sobre mim</label>
+            <input type="text" id="about" placeholder="Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.">
+         </div>
 
-         <label class="form-profile-label font14" for="education">Formação</label>
-         <input type="text" id="education">
-         <input type="text" id="education">
+         <div class="label-input">
+            <label class="form-profile-label font14" for="education">Formação</label>
+            <input type="text" id="education">
+            <input type="text" id="education">
+         </div>
 
-         <label class="form-profile-label font14" for="">Redes sociais</label>
-         <input type="url" name="userLinkedin" id="userLinkedin">
-         <input type="url" name="userMedium" id="userMedium">
-         <input type="url" name="userBehance" id="userBehance">
-         <input type="url" name="userGithub" id="userGithub">
-         <input type="url" name="userTwitter" id="userTwitter">
+         <div class="label-input">
+            <label class="form-profile-label font14" for="">Redes sociais</label>
+            <input type="url" name="userLinkedin" id="userLinkedin">
+            <input type="url" name="userMedium" id="userMedium">
+            <input type="url" name="userBehance" id="userBehance">
+            <input type="url" name="userGithub" id="userGithub">
+            <input type="url" name="userTwitter" id="userTwitter">
+         </div>
       </form>
    </main>
 </body>
