creation of the saving button and the buttons to open

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -54,14 +54,24 @@
          </div>
 
          <div class="label-input">
-            <label class="form-profile-label font14" for="">Redes sociais</label>
+            <label class="form-profile-label social-media-title font14" for="">Redes sociais</label>
             <input type="url" name="userLinkedin" id="userLinkedin">
             <input type="url" name="userMedium" id="userMedium">
             <input type="url" name="userBehance" id="userBehance">
             <input type="url" name="userGithub" id="userGithub">
             <input type="url" name="userTwitter" id="userTwitter">
          </div>
+
+         <button class="font16"id="edit-profile-save" type="submit">Salvar alterações</button>
       </form>
+
+      <div class="open-button font18">
+         <h2>Interesses</h2>
+      </div>
+
+      <div class="open-button font18">
+         <h2>Painel do mentor</h2>
+      </div>
    </main>
 </body>
 </html>
