animation of menu

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- PROFILE USER -->
             <div class="profile">
                 <div class="profile-image">
-                    <img src="./assets/img/perfil mulher.jpg" alt="Foto do perfil da conta">
+                    <img src="./assets/img/perfil mulher.jpg" alt="">
                 </div>
 
                 <div class="profile-info">
@@ -52,28 +52,29 @@
                 <!-- MENU ITEMS -->
             <div class="nav-item">
                 <a href="#">
-                    <i class="nav-item-icon">i</i>
+                  <img src="./assets/icons/home-page-icon.svg" alt="">
                     <h4>Página Inicial</h4> 
                 </a>
             </div> 
 
             <div class="nav-item">            
                 <a href="#">
-                    <i class="nav-item-icon">i</i>  
+                  <img src="./assets/icons/schedule-icon.svg" alt="">  
                     <h4>Meus agendamentos</h4> 
                 </a>
             </div>
 
             <div class="nav-item">            
                 <a href="#">
-                    <i class="nav-item-icon">i</i>  
-                    <h4>Notificações</h4> 
+                  <img src="./assets/icons/profile-icon.svg" alt="">
+                    <h4>Perfil</h4> 
                 </a>
             </div>
 
-            <div class="nav-item">            
+            <div class="nav-item" id="nav-item-out-line">            
                 <a href="#">
-                    <i class="nav-item-icon">?</i>  
+                  <img src="./assets/icons/out-line-icon.svg" alt=""> 
+                  <h4>Sair</h4> 
                 </a>
             </div>
         </div>
