Created script to create a card for each mentor on our database

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
     <!-- SECTON -->
     <section class="main">
-      <div class="mentors">
-        <div class="mentors-card">
+      <div id="mentors" class="mentors">
+        <!-- <div class="mentors-card">
           <div class="mentors-card-img"></div>
           <h3 class="mentors-card-name">Guilherme Lima</h3>
           <h4>Desenvolvedor Sênior</h4>
@@ -203,10 +203,12 @@
             </div>
           </div>
           <button class="mentors-card-btn">Ver Perfil</button>
-        </div>
+        </div> -->
 
       </div>
     </section>
   </main>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script type="text/javascript" src="./scripts/createMentorsCards.js"></script>
 </body>
 </html>
