Created script to use query string to fetch mentor data in api

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -133,8 +133,7 @@
       </article>
     </section>
   </main>
-
-  <script src=""></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script type="text/javascript" src="./scripts/createMentorProfile.js"></script>
 </body>
-
 </html>
