structuring and styling the buttons

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -22,9 +22,8 @@
    <main>
       <form class="form-profile">
 
-         <div class="profile-photo">
+         <div class="form-profile-image"></div>
 
-         </div>
          <a id="change-photo" href="#">Alterar foto</a>
 
          <div class="label-input">
@@ -62,7 +61,8 @@
             <input type="url" name="userTwitter" id="userTwitter">
          </div>
 
-         <button class="font16"id="edit-profile-save" type="submit">Salvar alterações</button>
+            <button class="font16 save-button" type="submit">Salvar alterações</button>
+
       </form>
 
       <div class="open-button font18">
@@ -72,6 +72,11 @@
       <div class="open-button font18">
          <h2>Painel do mentor</h2>
       </div>
+
    </main>
+
+   <footer class="footer">
+      <a class="top-page">Ir para o topo da página</a>
+   </footer>
 </body>
 </html>
