finish structure menu mobile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="./styles/css/style-aside.css">
   <link rel="stylesheet" href="./styles/css/style-index.css">
 
+  <script src="./scripts/aside.js"></script>
+
   <title>Página Inicia</title>
 </head>
 <body>
@@ -30,10 +32,10 @@
             
             <!-- BUTTON USED ON MOBILE -->
         <div id="nav-btn">
-            <img src="./assets/icons/aside-mobile-icon.svg" alt="">
+            <img src="./assets/icons/aside-mobile-icon.svg" alt="" class="openMenu">
         </div>
 
-        <div id="nav-menu">  
+        <div id="nav-menu" class="mainMenu">  
             <!-- PROFILE USER -->
             <div class="profile">
                 <div class="profile-image">
@@ -83,7 +85,7 @@
 
 
     <!-- SECTON -->
-    <section class="main">
+    <section class="main closeMenu">
       <div class="mentors">
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
