menu mobile bnt

--- a/index.html
+++ b/index.html
@@ -31,11 +31,14 @@
         <aside class="menu">
             
             <!-- BUTTON USED ON MOBILE -->
-        <div id="nav-btn">
-            <img src="./assets/icons/aside-mobile-icon.svg" alt="" class="openMenu">
+        <div id="nav-btn" class="btnMenu">
+            <span class="line1"></span>
+            <span class="line2"></span>
+            <span class="line3"></span>
+            <span class="line4"></span>
         </div>
 
-        <div id="nav-menu" class="mainMenu">  
+        <div id="nav-menu" class="navMenu">  
             <!-- PROFILE USER -->
             <div class="profile">
                 <div class="profile-image">
@@ -85,7 +88,7 @@
 
 
     <!-- SECTON -->
-    <section class="main closeMenu">
+    <section class="main">
       <div class="mentors">
         <div class="mentors-card">
           <div class="mentors-card-img"></div>
