added first line of first square

--- a/pages/mentorship-schedules.html
+++ b/pages/mentorship-schedules.html
@@ -16,20 +16,33 @@
 <body>
 
 <aside>
-  <h3 class="mentorship-schedule-title font28">Meus agendamentos</h3>
+  <h2 class="mentorship-schedule-title font28">Meus agendamentos</h2>
   <hr class="divider">
-  <div class="first-larger-square">
-    <section class="appointment">
+  <div class="main-first-larger-square">
+    <div class="first-square-appointment">
+      <section class="appointment-list-title-legend">
+        <h3 class="scheduled-mentorships font26">Mentorias marcadas</h3>
+        <div class="legends">
+          <div class="content-legend">
+            <figure class="circle"></figure>
+            <figcaption>Mentor</figcaption>
+          </div>
+          <div class="content-legend">
+            <figure class="circle"></figure>
+            <figcaption>Mentorado</figcaption>
+          </div>
+        </div>
+      </section>
       <article class="appointment-list">
-        <h2>Meus agendamentos</h2>
+        <section class="scheduled-mentorships font26">retangulo com foto mentoria</section>
       </article>
-    </section>
-    <section class="second-larger-square">
+    </div>
+    <section class="second-square-info-calend">
       <article class="information">
-        <h2>descrições</h2>
+        <h3>descrições</h3>
       </article>
       <article class="calendar">
-        <h2>calendario</h2>
+        <h3>calendario</h3>
       </article>
     </section>
   </div>
