styling select platform div

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -113,6 +113,8 @@
             <p class="planning-warning-description font14">O painel acima mostra as datas e horários que você já adicionou ao seu perfil e ainda não foram marcadas por nenhum mentorado</p>
          </div>
 
+         <h2 id="font18 schedule-title">Adicione mais horários a sua agenda</h2>
+
          <div class="schedule-date-hour">
             <div class="schedule-date">
                <label for="date-input" class="font14">Data</label>
@@ -122,8 +124,17 @@
                <label for="time-input" class="font14">Hora</label>
                <input type="time" name="time-input" id="time-input">
             </div>
+         </div>
 
+         <div class="platforms">
+            <h3 class="font18">Selecione a plataforma</h3>
+            <ul class="mentor-platforms">
+               <i class="mentor-platforms-icon">i</i>
+               <i class="mentor-platforms-icon">i</i>
+               <i class="mentor-platforms-icon">i</i>
+             </ul>
 
+             <button id="confirm-button" class="font18" type="submit">Confirmar disponibilidade</button>
          </div>
 
       </div>
