--- a/edit-profile.html
+++ b/edit-profile.html
@@ -19,6 +19,10 @@
    <title></title>
 </head>
 <body>
+   <header class="header">
+      <i class="">icon</i>
+      <i class="logo-header">icon</i>
+   </header>
    <main>
       <form class="form-profile">
 
@@ -67,6 +71,7 @@
 
       <div class="open-button font18" id="interests">
          <h2>Interesses</h2>
+         <i class="">i</i>
       </div>
 
       <div class="interests-opened">
@@ -83,11 +88,14 @@
       </div>
       
       <div id="button-plus">
+         <i class="">i</i>
          <h4>Clique para adicionar mais interesses</h4>
       </div>
 
       <div class="open-button font18" id="mentor-panel">
          <h2>Painel do mentor</h2>
+         <i class="">i</i>
+                     
       </div>
 
       <div class="mentor-panel-opened">
@@ -105,6 +113,7 @@
             </div>
          </ul>
          <div id="button-plus">
+            <i class="">i</i>
             <h4>Clique para adicionar mais habilidades</h4>
          </div>
 
@@ -113,7 +122,7 @@
             <p class="planning-warning-description font14">O painel acima mostra as datas e horários que você já adicionou ao seu perfil e ainda não foram marcadas por nenhum mentorado</p>
          </div>
 
-         <h2 id="font18 schedule-title">Adicione mais horários a sua agenda</h2>
+         <h2 id="schedule-title" class="font18">Adicione mais horários a sua agenda</h2>
 
          <div class="schedule-date-hour">
             <div class="schedule-date">
