finish basic css on the page

--- a/edit-profile.html
+++ b/edit-profile.html
@@ -77,12 +77,12 @@
       <div class="interests-opened">
          <ul>
             <div class="first-line">
-               <li class="interests-opened-topic">Design Thinking</li>
-               <li class="interests-opened-topic">Figma</li>
+               <li class="opened-topic">Design Thinking</li>
+               <li class="opened-topic">Figma</li>
             </div>
             <div class="second-line">
-               <li class="interests-opened-topic">Adobe XD</li>
-               <li class="interests-opened-topic">Sketch</li>
+               <li class="opened-topic">Adobe XD</li>
+               <li class="opened-topic">Sketch</li>
             </div>
          </ul>
       </div>
@@ -100,21 +100,25 @@
 
       <div class="mentor-panel-opened">
 
-         <h3 class="font16">Habilidades</h3>
+         <h3 class="font16 habilities-title">Habilidades</h3>
 
          <ul>
             <div class="first-line">
-               <li class="opened-topic hability"></li>
-               <li class="opened-topic hability"></li>
+               <li class="opened-topic hability">Product Discovery</li>
+               <li class="opened-topic hability">Product Discovery</li>
             </div>
             <div class="second-line">
-               <li class="opened-topic hability"></li>
-               <li class="opened-topic hability"></li>
+               <li class="opened-topic hability">Product Discovery</li>
+               <li class="opened-topic hability">Product Discovery</li>
             </div>
          </ul>
          <div id="button-plus">
             <i class="">i</i>
             <h4>Clique para adicionar mais habilidades</h4>
+         </div>
+
+         <div class="calendar">
+            CALENDÁRIO
          </div>
 
          <div class="planning-warning">
