created appointment lists and paragraphs with informations

--- a/pages/mentorship-schedules.html
+++ b/pages/mentorship-schedules.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<aside>
+<aside class="body-main">
   <h2 class="mentorship-schedule-title font28">Meus agendamentos</h2>
   <hr class="divider">
   <div class="main-first-larger-square">
@@ -33,13 +33,32 @@
           </div>
         </div>
       </section>
-      <article class="appointment-list">
-        <section class="scheduled-mentorships font26">retangulo com foto mentoria</section>
-      </article>
+      <section class="appointment-content-list">
+        <article class="appointment-list">
+          <div class="appointment-list-mentor-photo">
+            <img class="mentor-photo" src="../assets/img/perfil mulher.jpg"></img>
+            <h2>Guilherme Lima</h2>
+            <h4>Desenvolvedor Sênior</h4>
+          </div>
+        </article>
+        <article class="appointment-list">
+          <div class="date-hour">
+            <div id="date">DATA</div>
+            <div id="hour">HORA</div>
+          </div>
+        </article>
+        <article class="appointment-list">
+          <div class="cancel-send-buttons">
+            <button id="cancel-button">Cancelar mentoria</button>
+            <button id="send-button">Enviar mensagem</button>
+          </div>
+        </article>
+      </section>
     </div>
     <section class="second-square-info-calend">
       <article class="information">
-        <h3>descrições</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia odio nam voluptatibus cum sit, placeat maiores debitis facilis rerum veritatis necessitatibus molestias doloremque velit, ratione officia voluptatum adipisci corporis error?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati dolores suscipit, architecto sequi odio ad adipisci ex exercitationem a itaque blanditiis enim, saepe at nesciunt rerum ullam. Debitis, beatae atque!</p>
       </article>
       <article class="calendar">
         <h3>calendario</h3>
